aggiustati problemi autenticazione